[project]
name = "pycodex2"
version = "0.1.0"
description = "Co-detection by indexing (CODEX) analysis using Python, version 2"
readme = "README.md"
authors = [
    {name = "Wenrui Wu",email = "wuwenruiwwr@outlook.com"},
    {name = "Zhangxin Zhao",email = "zhangxinzhao1220@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.11.4",
    "deepcell",
    "geopandas>=1.1.1",
    "ipykernel>=7.0.1",
    "rasterio>=1.4.3",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "zarr>=2.18.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
