[project]
name = "codex_preprocessing"
version = "0.1.1"
description = "Co-detection by indexing (CODEX) analysis: preprocessing"
readme = "README.md"
authors = [
    {name = "Wenrui Wu",email = "wuwenruiwwr@outlook.com"},
    {name = "Huaying Qiu"},
    {name = "Zhangxin Zhao",email = "zhangxinzhao1220@gmail.com"},
]
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.11.4",
    "ipykernel>=7.0.1",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
